helm.yaml
---
# Source: microservicesruntime/templates/service.yaml
# /*
#  * Copyright (c) 2023 Software AG, Darmstadt, Germany and/or its licensors
#  *
#  * SPDX-License-Identifier: Apache-2.0
#  *
#  *   Licensed under the Apache License, Version 2.0 (the "License");
#  *   you may not use this file except in compliance with the License.
#  *   You may obtain a copy of the License at
#  *
#  *       http://www.apache.org/licenses/LICENSE-2.0
#  *
#  *   Unless required by applicable law or agreed to in writing, software
#  *   distributed under the License is distributed on an "AS IS" BASIS,
#  *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  *   See the License for the specific language governing permissions and
#  *   limitations under the License.
#  *
#  */

apiVersion: v1
kind: Service
metadata:
  name: stt-hello-world
  labels:
    app.kubernetes.io/name: microservicesruntime
    helm.sh/chart: microservicesruntime-1.0.5
    app.kubernetes.io/instance: msr-hello-world
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "10.15"
spec:
  type: NodePort
  ports:
  - port: 5555
    protocol: TCP
    targetPort: http
    name: http
  - port: 9999
    protocol: TCP
    targetPort: diag
    name: diag
  - port: 5543
    protocol: TCP
    targetPort: https
    name: https
  selector:
    app.kubernetes.io/name: microservicesruntime
    app.kubernetes.io/instance: msr-hello-world
---
# Source: microservicesruntime/templates/deployment.yaml
# /*
#  * Copyright (c) 2023 Software AG, Darmstadt, Germany and/or its licensors
#  *
#  * SPDX-License-Identifier: Apache-2.0
#  *
#  *   Licensed under the Apache License, Version 2.0 (the "License");
#  *   you may not use this file except in compliance with the License.
#  *   You may obtain a copy of the License at
#  *
#  *       http://www.apache.org/licenses/LICENSE-2.0
#  *
#  *   Unless required by applicable law or agreed to in writing, software
#  *   distributed under the License is distributed on an "AS IS" BASIS,
#  *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  *   See the License for the specific language governing permissions and
#  *   limitations under the License.
#  *
#  */

apiVersion: apps/v1
kind: Deployment
metadata:
  name: stt-hello-world
  labels:
    app.kubernetes.io/name: microservicesruntime
    helm.sh/chart: microservicesruntime-1.0.5
    app.kubernetes.io/instance: msr-hello-world
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "10.15"
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: microservicesruntime
      app.kubernetes.io/instance: msr-hello-world
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: "/metrics" 
        prometheus.io/port: "5555"
        prometheus.io/scheme: "http"
      labels:
        app.kubernetes.io/name: microservicesruntime
        app.kubernetes.io/instance: msr-hello-world
    spec:
      imagePullSecrets:
        - name: dh-regcred
      serviceAccountName: default
      securityContext:
        fsGroup: 1724
      containers:
        - name: msr-hello-world
          securityContext:
            {}
          image: "staillansag/stt-hello-world:mf-0.0.2"
          imagePullPolicy: IfNotPresent
          ports:
          - containerPort: 5543
            name: https
            protocol: TCP
          - containerPort: 9999
            name: diag
            protocol: TCP
          - containerPort: 5555
            name: http
            protocol: TCP
          startupProbe:
            failureThreshold: 32
            initialDelaySeconds: 20
            periodSeconds: 5
            tcpSocket:
              port: http
          livenessProbe:
            failureThreshold: 3
            httpGet:
              path: /health/liveness
              port: http
            initialDelaySeconds: 0
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 2
          readinessProbe:
            failureThreshold: 3
            httpGet:
              path: /health/readiness
              port: http
            initialDelaySeconds: 0
            periodSeconds: 15
            successThreshold: 1
            timeoutSeconds: 2
          resources:
            limits:
              cpu: 1000m
              memory: 1024Mi
            requests:
              cpu: 500m
              memory: 512Mi
          volumeMounts:
            - name: microservicesruntime-license
              mountPath: /opt/softwareag/IntegrationServer/licenseKey.xml
              subPath:   licenseKey.xml
              readOnly:  true
            - name: application-properties
              mountPath: /opt/softwareag/IntegrationServer/application.properties
              subPath:   application.properties
              readOnly:  true
            - name: applicationfile-properties
              mountPath: /opt/softwareag/IntegrationServer/applicationFile.properties
              subPath:   applicationFile.properties
              readOnly:  true
            - mountPath: /files
              name: fileshare
              readOnly: false
            - mountPath: /opt/softwareag/IntegrationServer/packages/WmPublic/config/fileAccessControl.cnf
              name: file-access-control
              readOnly: true
              subPath: fileAccessControl.cnf
            - name: msr-secrets
              mountPath: /etc/secrets
        
      volumes:
        - name: msr-secrets
          secret:
            secretName: msr-secrets
        - name: microservicesruntime-license
          configMap:
            name: microservicesruntime-license-key
            defaultMode: 0666
            items:
            - key:  licensekey
              path: licenseKey.xml
        - name: application-properties
          configMap:
            name: stt-hello-world
            items:
            - key:  application.properties
              path: application.properties
        - name: applicationfile-properties
          configMap:
            name: stt-hello-world
            items:
            - key:  applicationFile.properties
              path: applicationFile.properties
        # Currently some extra blocks accept strings
        # to continue with backwards compatibility this is being kept
        # whilst also allowing for yaml to be specified too.
          
        - name: fileshare
          persistentVolumeClaim:
            claimName: stt-hello-world
        - configMap:
            name: file-access-control
          name: file-access-control
---
# Source: microservicesruntime/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stt-hello-world
  labels:
    app.kubernetes.io/name: microservicesruntime
    helm.sh/chart: microservicesruntime-1.0.5
    app.kubernetes.io/instance: msr-hello-world
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/version: "10.15"
spec:
  ingressClassName: nginx
  rules:
    - host: msr-helloworld.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stt-hello-world
                port:
                  number: 5555
---
# Source: microservicesruntime/templates/hpa.yaml
# /*
#  * Copyright (c) 2023 Software AG, Darmstadt, Germany and/or its licensors
#  *
#  * SPDX-License-Identifier: Apache-2.0
#  *
#  *   Licensed under the Apache License, Version 2.0 (the "License");
#  *   you may not use this file except in compliance with the License.
#  *   You may obtain a copy of the License at
#  *
#  *       http://www.apache.org/licenses/LICENSE-2.0
#  *
#  *   Unless required by applicable law or agreed to in writing, software
#  *   distributed under the License is distributed on an "AS IS" BASIS,
#  *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  *   See the License for the specific language governing permissions and
#  *   limitations under the License.
#  *
#  */
---
# Source: microservicesruntime/templates/ingress.yaml
# /*
#  * Copyright (c) 2023 Software AG, Darmstadt, Germany and/or its licensors
#  *
#  * SPDX-License-Identifier: Apache-2.0
#  *
#  *   Licensed under the Apache License, Version 2.0 (the "License");
#  *   you may not use this file except in compliance with the License.
#  *   You may obtain a copy of the License at
#  *
#  *       http://www.apache.org/licenses/LICENSE-2.0
#  *
#  *   Unless required by applicable law or agreed to in writing, software
#  *   distributed under the License is distributed on an "AS IS" BASIS,
#  *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  *   See the License for the specific language governing permissions and
#  *   limitations under the License.
#  *
#  */
---
# Source: microservicesruntime/templates/job.yaml
# /*
#  * Copyright (c) 2023 Software AG, Darmstadt, Germany and/or its licensors
#  *
#  * SPDX-License-Identifier: Apache-2.0
#  *
#  *   Licensed under the Apache License, Version 2.0 (the "License");
#  *   you may not use this file except in compliance with the License.
#  *   You may obtain a copy of the License at
#  *
#  *       http://www.apache.org/licenses/LICENSE-2.0
#  *
#  *   Unless required by applicable law or agreed to in writing, software
#  *   distributed under the License is distributed on an "AS IS" BASIS,
#  *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  *   See the License for the specific language governing permissions and
#  *   limitations under the License.
#  *
#  */
---
# Source: microservicesruntime/templates/pvc.yaml
# /*
#  * Copyright (c) 2023 Software AG, Darmstadt, Germany and/or its licensors
#  *
#  * SPDX-License-Identifier: Apache-2.0
#  *
#  *   Licensed under the Apache License, Version 2.0 (the "License");
#  *   you may not use this file except in compliance with the License.
#  *   You may obtain a copy of the License at
#  *
#  *       http://www.apache.org/licenses/LICENSE-2.0
#  *
#  *   Unless required by applicable law or agreed to in writing, software
#  *   distributed under the License is distributed on an "AS IS" BASIS,
#  *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  *   See the License for the specific language governing permissions and
#  *   limitations under the License.
#  *
#  */
---
# Source: microservicesruntime/templates/serviceaccount.yaml
# /*
#  * Copyright (c) 2023 Software AG, Darmstadt, Germany and/or its licensors
#  *
#  * SPDX-License-Identifier: Apache-2.0
#  *
#  *   Licensed under the Apache License, Version 2.0 (the "License");
#  *   you may not use this file except in compliance with the License.
#  *   You may obtain a copy of the License at
#  *
#  *       http://www.apache.org/licenses/LICENSE-2.0
#  *
#  *   Unless required by applicable law or agreed to in writing, software
#  *   distributed under the License is distributed on an "AS IS" BASIS,
#  *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  *   See the License for the specific language governing permissions and
#  *   limitations under the License.
#  *
#  */
---
# Source: microservicesruntime/templates/servicemonitor.yaml
# /*
#  * Copyright (c) 2023 Software AG, Darmstadt, Germany and/or its licensors
#  *
#  * SPDX-License-Identifier: Apache-2.0
#  *
#  *   Licensed under the Apache License, Version 2.0 (the "License");
#  *   you may not use this file except in compliance with the License.
#  *   You may obtain a copy of the License at
#  *
#  *       http://www.apache.org/licenses/LICENSE-2.0
#  *
#  *   Unless required by applicable law or agreed to in writing, software
#  *   distributed under the License is distributed on an "AS IS" BASIS,
#  *   WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
#  *   See the License for the specific language governing permissions and
#  *   limitations under the License.
#  *
#  */
