openshift.yml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: stt-hello-world
  name: stt-hello-world
spec:
  replicas: 2
  selector:
    matchLabels:
      app: stt-hello-world
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      labels:
        app: stt-hello-world
    spec:
      containers:
        - image: quay.io/staillanibm/stt-hello-world:latest
          name: msr
          volumeMounts:
            - name: application-properties
              mountPath: /opt/softwareag/IntegrationServer/application.properties
              subPath:   application.properties
              readOnly:  true
            - name: secrets
              mountPath: /etc/secrets
            - name: microservicesruntime-license
              mountPath: /opt/softwareag/IntegrationServer/config/licenseKey.xml
              subPath:   licenseKey.xml
              readOnly:  true
          readinessProbe:
            tcpSocket:
              port: 5555
            initialDelaySeconds: 30
            periodSeconds: 5
            failureThreshold: 18
          livenessProbe:
            tcpSocket:
              port: 5555
            failureThreshold: 3
            initialDelaySeconds: 120
            periodSeconds: 5
            successThreshold: 1
            timeoutSeconds: 1
          resources:
            requests:
              cpu: 300m
              memory: 500Mi
            limits:
              cpu: 1000m
              memory: 1000Mi
      volumes:
        - name: application-properties
          configMap:
            name: stt-hello-world
            items:
            - key:  application.properties
              path: application.properties
        - name: secrets
          secret:
            secretName: stt-hello-world
        - name: microservicesruntime-license
          secret:
            secretName: licenses
            defaultMode: 0666
            items:
            - key:  msr-license
              path: licenseKey.xml

---

apiVersion: v1
kind: Service
metadata:
  name: stt-hello-world
  labels:
    name: stt-hello-world
    app: stt-hello-world
spec:
  selector:
    app: stt-hello-world
  type: ClusterIP
  ports:
  - port: 8080
    targetPort: 5555
    name: http

---

kind: Route
apiVersion: route.openshift.io/v1
metadata:
  name: stt-hello-world
  labels:
    app: stt-hello-world
    name: stt-hello-world
spec:
  to:
    kind: Service
    name: stt-hello-world
    weight: 100
  port:
    targetPort: http
  wildcardPolicy: None
